# entitymapper

./: Cargo.toml  Makefile  README.md  docker-compose.yml  hook.yml
resources/: gen-schema.json  gen.csv  gen.yaml  iris.yaml  test-lines.json  test-lines.jsonl  test.json  test.parquet
src/: create.rs  data.rs  kafka.rs  load.rs  main.rs  map.rs  postgres.rs  stub.rs
