[package]
name = "entitymapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "54.3.0" }
url = "2.5.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
futures = "0.3.31"
postgres = { version = "0.19.10" }
rdkafka = { version = "0.37", features = ["cmake-build"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_yaml = "0.9.34"
arrow-json = "54.3.0"
base64 = "0.22.1"
arrow-cast = "54.3.0"
serde_json = "1.0.140"
serde = "1.0.219"
arrow-csv = "54.3.1"
